<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_confirm_password_text"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/dialogTitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_confirmation_password_hint"
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_confirm_password_cancel_text"
            android:id="@+id/dialogCancel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_confirm_password_conf_text"
            android:id="@+id/dialogConfirm"/>
    </RelativeLayout>
</LinearLayout>