<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/tvConfirmSignOut"
            android:text="@string/fragment_sign_out_confirm_text"/>
        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sign_out_button_text"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:id="@+id/btnConfirmSignOut"
            android:layout_below="@id/tvConfirmSignOut"
            android:background="@drawable/white_rounded_button"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:id="@+id/progressbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_signing_out_text"
        android:textSize="20sp"
        android:layout_alignBottom="@id/progressbar"
        android:layout_alignStart="@id/progressbar"
        android:layout_alignEnd="@id/progressbar"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/tvSigningOut"/>
</RelativeLayout>