<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <com.microprogramer.library.CircularImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/comment_profile_image"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_android"
        app:civ_border_width="0.5dp"
        app:civ_border_color="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relLayout1"
        android:layout_toEndOf="@id/comment_profile_image"
        android:background="@drawable/grey_border_bottom"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_comment_username"
                android:id="@+id/comment_username"
                android:layout_marginStart="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_comment_text"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:id="@+id/comment"
                android:layout_toEndOf="@id/comment_username"/>

            <TextView
                android:id="@+id/comment_time_posted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/comment"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/layout_comment_date"
                android:textColor="@color/grey"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_comment_likes"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:id="@+id/comment_likes"
                android:layout_marginTop="15dp"
                android:layout_below="@id/comment"
                android:layout_toEndOf="@id/comment_time_posted"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_comment_reply"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:id="@+id/comment_reply"
                android:layout_marginTop="15dp"
                android:layout_below="@id/comment"
                android:layout_toEndOf="@id/comment_likes"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/comment_like"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_heart_white"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>